--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>Hola </p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>¡Hola, GitHub Pages!</h1>
+    <p>Este es mi sitio web alojado en GitHub Pages.</p>
+</body>
+</html>
