--- a/index.html
+++ b/index.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página</title>
+    <title>Mi Página Personal</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>¡Hola, GitHub Pages!</h1>
-    <p>Este es mi sitio web alojado en GitHub Pages.</p>
+    <div class="hero">
+        <h1>¡Bienvenido a Mi Página!</h1>
+        <p>Sígueme en mis redes sociales:</p>
+        <div class="social-links">
+            <a href="https://facebook.com" target="_blank" class="social facebook">Facebook</a>
+            <a href="https://twitter.com" target="_blank" class="social twitter">Twitter</a>
+            <a href="https://instagram.com" target="_blank" class="social instagram">Instagram</a>
+            <a href="https://linkedin.com" target="_blank" class="social linkedin">LinkedIn</a>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2025 Mi Página Personal. Todos los derechos reservados.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
+
