--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
         <p>Sígueme en mis redes sociales:</p>
         <div class="social-links">
             <a href="https://facebook.com" target="_blank" class="social facebook">Facebook</a>
-            <a href="https://twitter.com" target="_blank" class="social twitter">Twitter</a>
             <a href="https://instagram.com" target="_blank" class="social instagram">Instagram</a>
-            <a href="https://linkedin.com" target="_blank" class="social linkedin">LinkedIn</a>
         </div>
     </div>
+
+    <div class="about">
+        <h2>Sobre mí</h2>
+        <p>Actualmente estoy estudiando <strong>TSU en Desarrollo de Software Multiplataforma</strong> en la <strong>Universidad Tecnológica del Valle de Toluca</strong>. Me apasiona el desarrollo web, las aplicaciones multiplataforma y aprender cosas nuevas cada día.</p>
+    </div>
+
     <footer>
         <p>&copy; 2025 Mi Página Personal. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
-
