--- a/index.html
+++ b/index.html
@@ -210,22 +210,22 @@
                 <div class="skill-card">
                     <i class="fas fa-laptop-code"></i>
                     <h3>Lenguajes de Programación</h3>
-                    <p>JavaScript, Java, Python (en aprendizaje)</p>
+                    <p>JavaScript, Java, Python, PHP (en aprendizaje)</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-globe"></i>
                     <h3>Desarrollo Web</h3>
-                    <p>HTML5, CSS3, JavaScript</p>
+                    <p>HTML5, CSS3, JavaScript (en aprendizaje)</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-database"></i>
-                    <h3>Bases de Datos</h3>
+                    <h3>Bases de Datos (en aprendizaje)</h3>
                     <p>MySQL</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-tools"></i>
                     <h3>Herramientas</h3>
-                    <p>Git, VS Code, GitHub</p>
+                    <p>Git, VS Code, GitHub (en aprendizaje)</p>
                 </div>
             </div>
         </section>
@@ -241,17 +241,17 @@
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
                     <h3>GitHub</h3>
-                    <a href="https://github.com/KikeGonRam" target="_blank">github.com/KikeGonRam</a>
+                    <a href="https://github.com/KikeGonRam" target="_blank">KikeGonRam</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-facebook"></i>
                     <h3>Facebook</h3>
-                    <a href="https://www.facebook.com/kike160418" target="_blank">facebook.com/kike160418</a>
+                    <a href="https://www.facebook.com/kike160418" target="_blank">Kike Gonzalez</a>
                 </div>
                  <div class="contact-item">
                     <i class="fab fa-instagram"></i>
                     <h3>Facebook</h3>
-                    <a href="https://www.instagram.com/kike_gonzalez_16" target="_blank">instagram.com/kike_gonzalez_16</a>
+                    <a href="https://www.instagram.com/kike_gonzalez_16" target="_blank">@kike_gonzalez_16</a>
                 </div>
             </div>
         </section>
