--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <header>
-        <img src="/api/placeholder/200/200" alt="Foto de Perfil" class="profile-img">
+        <img src="images/mi-foto.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
         <h1>Luis Enrique González Ramírez</h1>
         <p>Estudiante de T.S.U. en Tecnologías de la Información</p>
         <p>Área Desarrollo de Software Multiplataforma</p>
