--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <header>
-        <img src="images/mi-foto.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
+        <img src="images/mi-foto2.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
         <h1>Luis Enrique González Ramírez</h1>
         <p>Estudiante de T.S.U. en Tecnologías de la Información</p>
         <p>Área Desarrollo de Software Multiplataforma</p>
@@ -219,8 +219,8 @@
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-database"></i>
-                    <h3>Bases de Datos (en aprendizaje)</h3>
-                    <p>MySQL</p>
+                    <h3>Bases de Datos</h3>
+                    <p>MySQL (en aprendizaje)</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-tools"></i>
