--- a/index.html
+++ b/index.html
@@ -37,21 +37,21 @@
             height: 50px;
             background: linear-gradient(to right bottom, transparent 49%, #f5f5f5 50%);
         }
-
         .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            margin: 1rem auto;
-            display: block;
-            background: #eee;
-            border: 5px solid white;
-            box-shadow: 0 0 20px rgba(0,0,0,0.2);
-            transition: transform 0.3s ease;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        margin: 1rem auto;
+        display: block;
+        background: #eee;
+        border: 5px solid white;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2), 0 0 15px rgba(255, 255, 255, 0.1);
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
 
         .profile-img:hover {
-            transform: scale(1.05);
+            transform: scale(1.1);
+            box-shadow: 0 0 30px rgba(0, 0, 0, 0.4), 0 0 25px rgba(255, 255, 255, 0.3);
         }
 
         .container {
