--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </head>
 <body>
     <header>
-        <img src="images/mi-foto2.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
+        <img src="images/mi-foto.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
         <h1>Luis Enrique González Ramírez</h1>
         <p>Estudiante de T.S.U. en Tecnologías de la Información</p>
         <p>Área Desarrollo de Software Multiplataforma</p>
@@ -199,7 +199,7 @@
             <h2><i class="fas fa-graduation-cap"></i> Educación</h2>
             <div class="education-item">
                 <h3>Universidad Tecnológica del Valle de Toluca</h3>
-                <p><i class="fas fa-book"></i> T.S.U. en Tecnologías de la Información</p>
+                <p><i class="fas fa-book"></i> T.S.U. en Tecnologías de la Información, Área Desarrollo de Software Multiplataforma</p>
                 <p><i class="fas fa-calendar"></i> 2023 - Presente</p>
             </div>
         </section>
