--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <body>
     <header>
         <img src="images/mi-foto.jpg" alt="Foto de Luis Enrique González Ramírez" class="profile-img">
-        <h1>Luis Enrique González Ramírez</h1>
+        <h1 style="color: white">Luis Enrique González Ramírez</h1>
         <p>Estudiante de T.S.U. en Tecnologías de la Información</p>
         <p>Área Desarrollo de Software Multiplataforma</p>
     </header>
