--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
             background: linear-gradient(to right bottom, transparent 49%, #f5f5f5 50%);
         }
         .profile-img {
-        width: 100px;
-        height: 100px;
-        border-radius: 60%;
-        margin: 1rem auto;
-        display: block;
-        background: #eee;
-        border: 5px solid white;
-        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2), 0 0 15px rgba(255, 255, 255, 0.1);
-        transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 150px; /* Tamaño más grande */
+            height: 150px; /* Tamaño más grande */
+            border-radius: 50%; /* Forma circular */
+            margin: 1rem auto;
+            display: block;
+            background: #eee;
+            border: 5px solid white;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2), 0 0 15px rgba(255, 255, 255, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-
+        
         .profile-img:hover {
             transform: scale(1.1);
             box-shadow: 0 0 30px rgba(0, 0, 0, 0.4), 0 0 25px rgba(255, 255, 255, 0.3);
